# Sprinkler

./: .gitignore  README.md  cputemp.json  gpio.txt  nginx-sprinkler  pyproject.toml  pytest-report.html  requirements.txt  run-tests.sh  sprinkler.service  test.sh  tox.ini  update.sh  wsgi.py
.github/workflows/: test.yaml
RPi/: GPIO.py
sprinkler/: .coverage  .gitignore  app.py  config.json  control.py  extensions.py  pyproject.toml  pytest-report.html  scheduler.py  schedules.json  sensor.py  views.py  wsgi.py
sprinkler/sprinkler/: __init__.py  app.py
sprinkler/static/: main.css
sprinkler/static/assets/css/: atlantis.css
sprinkler/static/assets/js/lexie/: dashboard.js
sprinkler/templates/: add_schedule.html  index.html  schedules.html
sprinkler/templates/includes/: footer.html
sprinkler/templates/layouts/: base.html
tests/: test_api.py  test_control.py  test_scheduler.py  test_sensor.py  test_web.py
tests/fixtures/: test_flask_app.py
