[tool.poetry]
name = "sprinkler"
version = "0.1.0"
description = ""
authors = ["Bear <csaba.ferenclaszlo@zapier.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
pytest-cov = "^3.0.0"
pytest-html = "^3.1.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.14.3"
tox = "^3.25.0"
isort = "^5.10.1"
mypy = "^0.961"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
